feat: ready for phase 3

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -63,6 +63,7 @@ tree-sitter-python = "0.20"
 tree-sitter-go = "0.20"
 tree-sitter-java = "0.20"
 async-trait = "0.1.89"
+urlencoding = "2.1.3"
 
 [dev-dependencies]
 tokio-test = "0.4"
