--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -64,6 +64,7 @@ tree-sitter-go = "0.20"
 tree-sitter-java = "0.20"
 async-trait = "0.1.89"
 urlencoding = "2.1.3"
+rand = "0.9.2"
 
 [dev-dependencies]
 tokio-test = "0.4"
