feat(incremental): phase 1 and 2 complete

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -52,6 +52,12 @@ url = "2.4"
 # Pattern matching
 glob = "0.3"
 
+# Cryptographic hashing
+sha2 = "0.10"
+
+# Database
+sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate"] }
+
 # Hash maps with better performance
 indexmap = "2.1"
 
