--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -18,6 +18,9 @@ xze-core = { path = "../core" }
 clap = { workspace = true }
 tokio = { workspace = true }
 
+# Database
+sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
+
 # Serialization
 serde = { workspace = true }
 serde_json = { workspace = true }
