--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -76,6 +76,7 @@ rand = "0.9.2"
 tokio-test = "0.4"
 mockito = "1.2"
 assert_matches = "1.5"
+testcontainers = "0.15"
 
 [features]
 default = ["ollama"]
