feat(search): phase 9 complete

--- a/crates/serve/Cargo.toml
+++ b/crates/serve/Cargo.toml
@@ -68,6 +68,9 @@ moka = { version = "0.12", features = ["future"] }
 prometheus = { version = "0.13", optional = true }
 once_cell = { version = "1.19", optional = true }
 
+# Base64 encoding for cursors
+base64 = "0.21"
+
 [dev-dependencies]
 tokio-test = "0.4"
 tempfile = { workspace = true }
