feat(search): phase 10 11 complete

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ serde_yaml = "0.9"
 
 # HTTP client and server
 reqwest = { version = "0.11", features = ["json", "stream"] }
-axum = "0.7"
+axum = { version = "0.7", features = ["ws"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["fs", "trace", "cors", "limit", "compression-full"] }
 
