feat(keywords): implement Phase 0 LLM keyword extraction validation (XZE-2001)
- Add prototype LLM keyword extractor example with Ollama integration
- Add search quality measurement tool with IR metrics (Precision, Recall, MRR)
- Create test query dataset with 50 representative queries
- Implement async/await with Tokio for concurrent processing
- Add comprehensive error handling with anyhow
- Include unit tests with >80% coverage
- Create Phase 0 implementation summary documentation
- Add how-to guide for running validation
- Fix clippy warning in core semantic search module

Phase 0 establishes baseline and validates LLM extraction approach
before proceeding to full implementation in Phase 1.

Test coverage: 100% on examples (5/5 tests passing)
Quality gates: All passing (fmt, check, clippy, test)
Documentation: Complete with usage examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -126,6 +126,8 @@ path = "src/main.rs"
 [dev-dependencies]
 tokio-test = "0.4"
 tempfile = { workspace = true }
+reqwest = { workspace = true }
+chrono = { workspace = true }
 
 [profile.release]
 lto = true
