feat(core): add llm keyword extractor module (XZE-2002)
Implement Phase 1 of LLM-based keyword extraction system:

- Create KeywordExtractor with hybrid extraction strategy
  * LLM-based extraction using Ollama with structured JSON output
  * LRU cache for performance (content-hash based keys)
  * Frequency-based fallback for reliability
  * Retry logic and timeout handling

- Add comprehensive configuration support
  * KeywordExtractorConfig with 11 configurable parameters
  * Model selection, cache size, retry policy
  * Document length limits, temperature control

- Implement batch processing
  * Parallel extraction for multiple documents
  * Async/await throughout for efficient I/O

- Add extensive test coverage
  * 19 unit tests covering all major functionality
  * Test extraction, caching, parsing, utilities
  * 100% pass rate, zero warnings

- Create performance benchmark suite
  * 6 benchmark groups for frequency extraction, caching,
    batch processing, tokenization, and utilities
  * Measures throughput and latency across document sizes

- Export GenerateRequest and GenerateOptions from ai module
- Add lru dependency to Cargo.toml
- Document all public APIs with examples

All quality gates passed:
- cargo fmt: PASSED
- cargo check: PASSED
- cargo clippy -D warnings: PASSED (0 warnings)
- cargo test: PASSED (19/19 tests)
- cargo check --benches: PASSED

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -55,6 +55,7 @@ regex = "1.10"
 
 # Caching (Phase 2: Multi-Intent Detection)
 moka = { version = "0.12", features = ["future"] }
+lru = "0.12"
 
 # Cryptographic hashing
 sha2 = "0.10"
@@ -106,4 +107,8 @@ default-features = false
 
 [[bench]]
 name = "intent_classification_bench"
+harness = false
+
+[[bench]]
+name = "keyword_extraction_bench"
 harness = false
